# gradescope-tools

./: .gitignore  Cargo.toml  README.md  deny.toml  example.env
.github/workflows/: checks.yml
.sqlx/: query-4d863f088ba55a5243797d9b09c23083d6cad437d17dbc7974a6710b36e1971b.json  query-522ff6793ded22e60bd97086eb851bc6f7e5c54bcd6d34efea8843486e593088.json  query-b559e9904f2de8845449ccaf9f4b168f3def7e004b2a471f380f578e7021efab.json  query-f2ad8a923654598bb9e8e85210b85ed0b3fd2bb22ed4fd8f67e5046e9f2716b6.json
app-utils/: Cargo.toml
app-utils/src/: lib.rs
gradescope-api/: Cargo.toml
gradescope-api/examples/: pdf.rs
gradescope-api/src/: assignment.rs  assignment_selector.rs  client.rs  course.rs  course_selector.rs  creds.rs  export_submissions.rs  gs_service.rs  lib.rs  question.rs  rate_limit.rs  regrade.rs  submission.rs  types.rs  unmatched.rs  util.rs
gradescope-api/src/services/: gs_service.rs  mod.rs  scraper_service.rs
gradescope-api/src/submission_export/: mod.rs  pdf.rs
gradescope-to-db/: Cargo.toml  README.md
gradescope-to-db/migrations/: 20230804182100_initial.sql  20230811013132_regrade_completion.sql
gradescope-to-db/src/: main.rs
lib203/: Cargo.toml
lib203/src/: exam.rs  lib.rs
lib203/src/homework/: mod.rs  pair.rs
notify-unmatched-pages/: Cargo.toml
notify-unmatched-pages/src/: identify.rs  lib.rs  main.rs  notify.rs  report.rs  sender.rs
server/: Cargo.toml
server/src/: log.rs  main.rs  notify_unmatched.rs  page_match_task.rs  task.rs
