[package]
name = "app-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
gradescope-api = { path = "../gradescope-api" }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "std",
    "env-filter",
    "fmt",
    "ansi",
    "registry",
] }
