[package]
name = "gradescope-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
async_zip = { version = "0.0.15", features = ["tokio", "deflate"] }
futures = "0.3.28"
itertools = "0.11.0"
lazy_static = "1.4.0"
pdf = "0.8.1"
reqwest = { version = "0.11.18", features = ["cookies", "stream"] }
scraper = "0.16.0"
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
url = "2.4.0"
