[package]
name = "gradescope-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
itertools = "0.11.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["cookies"] }
scraper = "0.16.0"
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
