[package]
name = "gradescope-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
async_zip = { version = "0.0.16", features = ["tokio", "deflate"] }
futures = "0.3.28"
itertools = "0.12.0"
lazy_static = "1.4.0"
nom = "7.1.3"
pdf-extract = "0.7.4"
pin-project = "1.1.3"
reqwest = { version = "0.11.18", features = ["cookies", "stream", "json"] }
scraper = "0.18.1"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.2.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rayon = "2.1.0"
tokio-util = { version = "0.7.8", features = ["compat"] }
tower = { version = "0.4.13", features = ["limit", "util", "reconnect"] }
tracing = "0.1.37"
url = "2.4.0"
