[package]
name = "notify-unmatched-pages"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
app-utils = { path = "../app-utils" }
gradescope-api = { path = "../gradescope-api" }
lib203 = { path = "../lib203" }
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
