[package]
name = "notify-unmatched-pages"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
app-utils = { path = "../app-utils" }
futures = "0.3.28"
gradescope-api = { path = "../gradescope-api" }
itertools = "0.11.0"
lettre = { version = "0.11.0", features = [
    "builder",
    "sendmail-transport",
    "tokio1",
    "tokio1-native-tls",
] }
lib203 = { path = "../lib203" }
serde_json = "1.0.105"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rayon = "2.1.0"
tokio-util = { version = "0.7.8", features = ["compat"] }
tracing = "0.1.37"
