[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app-utils = { path = "../app-utils" }
gradescope-api = { path = "../gradescope-api" }
notify-unmatched-pages = { path = "../notify-unmatched-pages" }

anyhow = "1.0.75"
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.105"
slack-morphism = { version = "1.14.2", features = ["hyper"] }
tokio = "1.32.0"
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "std",
    "env-filter",
    "fmt",
    "ansi",
    "registry",
] }
